--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    tools:context=".SplashActivity">
+    tools:context=".SplashActivity"
+    >
 
     <ImageView
         android:id="@+id/imageView"
