created NASA logic for login

--- a/app/src/main/res/layout-v28/activity_custom_login.xml
+++ b/app/src/main/res/layout-v28/activity_custom_login.xml
@@ -10,16 +10,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="monospace"
         android:text="@string/login"
         app:layout_constraintBottom_toTopOf="@id/usernameCustom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.8"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        />
+        android:textFontWeight="700"/>
 
     <EditText
         android:id="@+id/usernameCustom"
