--- a/app/src/main/res/layout/activity_custom_login.xml
+++ b/app/src/main/res/layout/activity_custom_login.xml
@@ -18,7 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.604" />
+        app:layout_constraintVertical_bias="0.604"
+        android:textColor="#2196F3"/>
 
     <EditText
         android:id="@+id/usernameCustom"
@@ -67,6 +68,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordCustom"
         app:layout_constraintVertical_bias="0.109" />
+    <Button
+        android:id="@+id/registerLogin"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#2196F3"
+        android:padding="10dp"
+        android:text="@string/register"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="register"
+         />
 
 
 
