--- a/app/src/main/res/layout-v21/activity_register.xml
+++ b/app/src/main/res/layout-v21/activity_register.xml
@@ -99,4 +99,17 @@
         app:cornerRadius="20dp"
 
         />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/abc_vector_test"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="#2196F3"
+        android:onClick="back"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="5dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
