--- a/app/src/main/res/layout/activity_custom_login.xml
+++ b/app/src/main/res/layout/activity_custom_login.xml
@@ -58,7 +58,7 @@
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/fav"
         android:onClick="login"
         android:padding="10dp"
         android:text="@string/login"
