--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,14 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Home Fragment"
-
-        />
-
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:fontFamily="monospace"
+    android:text="Home"
+    android:textColor="@color/fav"
+    android:textFontWeight="900"
+    android:textSize="30dp"
+    android:textStyle="bold"
+    android:layout_marginVertical="15dp"
+    android:textAlignment="center"/>
 </FrameLayout>
