--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,12 +3,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".bottomNav.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="50dp"
+        android:fontFamily="monospace"
+        android:text="Profile"
+        android:textColor="@color/fav"
+        android:textFontWeight="900"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_marginVertical="15dp"
+        android:textAlignment="center"/>
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginHorizontal="120dp"
+        android:layout_marginVertical="80dp"
+        android:src="@drawable/untitled_design__1_"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+
+        android:fontFamily="monospace"
+        android:text="Jay Patel"
+        android:textColor="@color/black"
+        android:textFontWeight="900"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginVertical="240dp"
+        android:textAlignment="center"
+
+        />
+
+
+
+
 
 </FrameLayout>
