--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,49 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".bottomNav.ProfileFragment">
+    tools:context=".bottomNav.profile.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    <ImageView-->
+<!--        android:id="@+id/settings"-->
+<!--        android:layout_width="35dp"-->
+<!--        android:layout_height="35dp"-->
+<!--        android:layout_marginStart="360dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:backgroundTint="@color/fav"-->
+<!--        android:onClick="setting"-->
+<!--        android:src="@drawable/ic_baseline_settings_24"-->
+<!--        app:tint="@color/fav" />-->
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginVertical="15dp"-->
+<!--        android:fontFamily="monospace"-->
+<!--        android:text="Profile"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/fav"-->
+<!--        android:textFontWeight="900"-->
+<!--        android:textSize="30dp"-->
+<!--        android:textStyle="bold" />-->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/profileNestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:fontFamily="monospace"
-        android:text="Profile"
-        android:textColor="@color/fav"
-        android:textFontWeight="900"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_marginVertical="15dp"
-        android:textAlignment="center"/>
+        android:layout_height="match_parent"
+        >
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginHorizontal="120dp"
-        android:layout_marginVertical="80dp"
-        android:src="@drawable/untitled_design__1_"
-        />
+        <LinearLayout
+            android:id="@+id/profileNestedScrollViewContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginHorizontal="120dp"
+                android:layout_marginTop="80dp"
+                android:src="@drawable/untitled_design__1_" />
 
-        android:fontFamily="monospace"
-        android:text="Jay Patel"
-        android:textColor="@color/black"
-        android:textFontWeight="900"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:layout_marginVertical="240dp"
-        android:textAlignment="center"
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:fontFamily="monospace"
+                android:text="Jay Patel"
+                android:textColor="@color/black"
+                android:textFontWeight="900"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                />
 
-        />
+            <ListView
+            android:id="@+id/profileListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        </LinearLayout>
 
-
-
+    </androidx.core.widget.NestedScrollView>
 
 
 </FrameLayout>
